Tue, Dec 23, 2008
---------------------------------------------------------------------
- Updated controller and view specs.
- Added permissions section to [Lead/New] form.

Mon, Dec 22, 2008
---------------------------------------------------------------------
- Moved form section toggling to application helper and home controller.
- Implemented section toggling in account and campaign forms.
- Added [toll_free_phone] field to accounts.
- Added .top and .req styles for field labels.
- Show/hide form sections based on session where we now store expand/collapse state.

Sun, Dec 21, 2008
---------------------------------------------------------------------
- Redesigned [Lead/New] and revamped related CSS styles.
- Reorganized global settings to make it easier to access them at runtime.
- Toggle sections using link_to_remote() to be able to store toggle status in a session.
- Reveal/hide form sections using toggle/slide visual effect.

Sat, Dec 20, 2008
---------------------------------------------------------------------
- Metallica show at Oakland Coliseum was totally amazing!

Fri, Dec 19, 2008
---------------------------------------------------------------------
- Replaced stub text fields with autocomplete in [Leads/New].

Thu, Dec 18, 2008
---------------------------------------------------------------------
- Implemented ratings JavaScript library to show star ratings.
- Updated [leads] schema, more polishing for [Leads/New] form.

Wed, Dec 17, 2008
---------------------------------------------------------------------
- Added flash confirmation messages for deletes.
- Work on [Leads/New] form (campaign autocomplete, etc.)

Tue, Dec 16, 2008
---------------------------------------------------------------------
- Updated designs for leads, campaigns, and opportunities using left-hand strips.
- Implemented new design for accounts index page.

Mon, Dec 15, 2008
---------------------------------------------------------------------
- More work on leads index page.