@@ -31,7 +31,7 @@
           = f.text_field :referred_by, :style => "width:240px"
           %div{:style => "margin-top:6px"}
             .check_box
-              = f.check_box :do_not_call, {}, @lead.do_not_call
+              = f.check_box :do_not_call, {}, true
               Do not call
 
 
